--- a/roles/ansible-zookeeper/tasks/Debian.yml
+++ b/roles/ansible-zookeeper/tasks/Debian.yml
@@ -1,22 +1,6 @@
-- name: Update apt cache
-  apt: update_cache=yes cache_valid_time={{apt_cache_timeout}}
-  tags: bootstrap
-
-- name: create group
-  group:
-    name: zookeeper
-    state: present
-  tags: zookeeper
-
-- name: create user
-  user:
-    name: zookeeper
-    group: zookeeper
-  tags: zookeeper
-
 - name: Setting internal variable
   set_fact:
-    zookeeper_name: zookeeper-{{ zookeeper.version }}
+    zookeeper_name: apache-zookeeper-{{ zookeeper.version }}-bin
   tags: zookeeper
 
 - name: Setting internal variable
@@ -26,10 +10,11 @@
 
 - name: Download Zookeeper {{ zookeeper.version }}
   get_url:
-    url: "{{ zookeeper.mirror }}/zookeeper/{{ zookeeper_name }}/{{ zookeeper_name }}.tar.gz"
+    url: "{{ zookeeper.mirror }}/{{ zookeeper_name }}.tar.gz"
     dest: "{{ zookeeper.download_dir }}/{{ zookeeper_name }}.tar.gz"
     mode: 0644
     force: no
+    validate_certs: no
   tags: zookeeper
 
 - name: Unpack the tar
@@ -47,7 +32,7 @@
   tags: zookeeper
 
 - name: Copy zookeeper to real destination
-  shell: mv {{ zookeeper.download_dir }}/{{ zookeeper_name }} {{ zookeeper_dir }} creates={{ zookeeper_dir }}
+  shell: sudo mv {{ zookeeper.download_dir }}/{{ zookeeper_name }} {{ zookeeper_dir }} creates={{ zookeeper_dir }}
   tags: zookeeper
 
 - name: Check for zookeeper data dir and create if not present
@@ -55,25 +40,20 @@
   register: check_path
   tags: zookeeper
 
-- shell: mkdir -p {{ zookeeper.data_dir }}
+- shell: sudo mkdir -p {{ zookeeper.data_dir }};echo '{{ zookeeper.data_dir }}'
   when: check_path.stat.exists == false
   tags: zookeeper
 
-- name: Overwrite myid file.
-  template:
-    src: myid.j2
-    dest: "{{ zookeeper.data_dir }}/myid" 
+- name: Link {{ zookeeper.install_dir }}/zookeeper to this version
+  shell: sudo ln -s {{ zookeeper_name }} zookeeper chdir={{ zookeeper.install_dir}} creates={{ zookeeper.install_dir }}/zookeeper
   tags: zookeeper
 
-- name: Link {{ zookeeper.install_dir }}/zookeeper to this version
-  shell: ln -s {{ zookeeper_name }} zookeeper chdir={{ zookeeper.install_dir}} creates={{ zookeeper.install_dir }}/zookeeper
+- name: ZOO UPDATE
+  shell: sed -i 's\home/devopr/var/run/zookeeper/data\/home/devopr/zk/run/zookeeper/data\g' /home/devopr/apache-zookeeper-3.5.5-bin/conf/zoo.cfg
   tags: zookeeper
 
 - name: Install the zookeeper service handler
-  template:
-    src: zookeeper-service.j2
-    dest: "/etc/init.d/zookeeper"
-    mode: 0755
+  shell: /home/devopr/{{ zookeeper_name }}/bin/zkServer.sh start 
   notify: start zookeeper
   tags: zookeeper
 
@@ -81,13 +61,13 @@
   service: name=zookeeper state=started
   tags: zookeeper
 
-#- name: Install the Zookeeper service handler
-#  copy: src=init.d/zookeeper dest=/etc/init.d/ mode=0755
-#  tags: zookeeper
+- name: Install the Zookeeper service handler
+  copy: src=init.d/zookeeper dest=/etc/init.d/ mode=0755
+  tags: zookeeper
 
-#- name: Run the Zookeeper service
-#  service: name=zookeeper state=started enabled=yes
-#  tags: zookeeper
+- name: Run the Zookeeper service
+  service: name=zookeeper state=started enabled=yes
+  tags: zookeeper
 
 - name: Get service on port {{ client_port }}
   shell: netstat -tunlp | grep ":{{ client_port }} "
