--- a/roles/ansible-java/tasks/Debian.yml
+++ b/roles/ansible-java/tasks/Debian.yml
@@ -1,25 +1,44 @@
-- name: Check if Java is already installed
-  command: java -version
-  register: java_version
-  failed_when: java_version.rc not in [0, 1, 2]
-  changed_when: False
+#- name: Check if Java is already installed
+#  command: java -version
+#  register: java_version
+#  failed_when: java_version.rc not in [0, 1, 2]
+#  changed_when: False
+#  tags: java
+
+#- hosts: java-nodes
+
+  #  vars:
+          #    download_url: http://download.oracle.com/otn-pub/java/jdk/8u5-b13/jdk-8u5-linux-x64.tar.gz
+    #    download_folder: /opt
+    #    java_name: "{{download_folder}}/jdk1.8.0_05"
+    #    java_archive: "{{download_folder}}/jdk-8u5-linux-x64.tar.gz
+
+- name: wget java to node
+  get_url:
+    url: "{{java_mirror}}/{{java_name}}.tar.gz"
+    dest: "~/"
+    validate_certs: no
+    mode: 0644
+    force: no
   tags: java
 
-- name: Add JRE ppa
-  apt_repository: repo=ppa:webupd8team/java state=present
+- name: Unpack the java tar
+  shell: tar -xzvf {{java_name}}.tar.gz
   tags: java
-  when: java_version.rc == 2
 
-- name: Automatically select the Oracle License
-  shell: echo debconf shared/accepted-oracle-license-v1-1 select true | sudo debconf-set-selections
+- name: Copy java to opt
+  shell: sudo cp -rf jdk8u222-b10  /opt/
   tags: java
-  when: java_version.rc == 2
 
-- name: Install JRE
-  apt: pkg=oracle-java{{ jdk_version }}-installer state=latest update-cache=yes force=no
+- name: set java home
+  shell: echo "export JAVA_HOME=/opt/jdk8u222-b10" >> .bashrc
   tags: java
-  when: java_version.rc == 2
 
-- name: Show how debug works
-  debug: msg=java-{{ jdk_version }}-oracle
+- name: set java path
+  shell: echo "export PATH=$PATH:$JAVA_HOME/bin" >> .bashrc
+  tags: java
+
+- name: refresh source
+  shell: source ~/.bashrc
+  tags: java
 
