--- a/roles/ansible-kafka/defaults/main.yml
+++ b/roles/ansible-kafka/defaults/main.yml
@@ -1,11 +1,11 @@
 apt_cache_timeout: 3600
 kafka:
-  version: "0.8.2.1"
-  scala_version: "2.10"
-  mirror: "http://mirrors.koehn.com/apache"
+  version: "2.4.0"
+  scala_version: "2.11"
+  mirror: "https://artifactory.idfcbank.com/extra-binaries/kafka_2.4.0"
   download_dir: "/tmp"
-  install_dir: "/usr/local"
-  data_dir: "/usr/local/var/run/kafka/data"
+  install_dir: "/home/devopr"
+  data_dir: "/home/devopr/kafka/run/kafka/data"
   server_properties: "real-server.properties"
 
 # This does not have to be every Zookeeper host, but the more the better
