--- a/roles/ansible-kafka/tasks/Debian.yml
+++ b/roles/ansible-kafka/tasks/Debian.yml
@@ -1,22 +1,36 @@
-- name: Update apt cache
-  apt: update_cache=yes cache_valid_time={{apt_cache_timeout}}
-  tags: bootstrap
 
-- name: create group
-  group:
-    name: kafka
-    state: present
+- name: wget java to node
+  get_url:
+    url: "{{java_mirror}}/{{java_name}}.tar.gz"
+    dest: "~/"
+    mode: 0644
+    force: no
+    validate_certs: no
   tags: kafka
 
-- name: create user
-  user:
-    name: kafka
-    group: kafka
+- name: Unpack the java tar
+  shell: tar -xzvf {{java_name}}.tar.gz
+  tags: kafka
+
+- name: Copy java to opt
+  shell: sudo cp -rf jdk8u222-b10 /opt/
+  tags: kafka
+
+- name: set java home
+  shell: echo "export JAVA_HOME=/opt/jdk8u222-b10" >> .bashrc
+  tags: kafka
+
+- name: set java path
+  shell: echo "export PATH=$PATH:$JAVA_HOME/bin" >> .bashrc
+  tags: kafka
+
+- name: refresh source
+  shell: source ~/.bashrc
   tags: kafka
 
 - name: Setting internal variable
   set_fact:
-    kafka_name: kafka_{{ kafka.scala_version }}-{{ kafka.version }}
+          kafka_name: kafka_{{scala_version}}-{{version}}
   tags: kafka
 
 - name: Setting internal variable
@@ -33,24 +47,18 @@
 
 - name: Ensure Kafka tar is downloaded
   get_url:
-    url: "{{ kafka.mirror }}/kafka/{{ kafka.version }}/{{ kafka_name }}.tgz"
-    dest: "{{ kafka.download_dir }}"
+    url: "{{kafka.mirror}}/{{ kafka_name }}.tgz"
+    dest: "{{ kafka.download_dir }}/kafka.tgz"
+    mode: 0644
+    validate_certs: no
+    force: no
   tags: kafka
-  when: kafka_tar_downloaded.rc == 1
 
 - name: Ensure tar is extracted
-  command: tar -zxf {{ kafka.download_dir }}/{{ kafka_name }}.tgz chdir={{ kafka.install_dir }}
+  command: tar -zxf {{ kafka.download_dir }}/kafka.tgz chdir={{ kafka.install_dir }}
   tags: kafka
 
 # Config and start Kafka
-- name: Ensures data dir "{{ kafka.data_dir }}" exists
-  file:
-    path: "{{ kafka.data_dir }}"
-    state: directory
-    owner: kafka
-    group: kafka
-  tags: kafka
-
 - name: Copy real config
   template:
     src: kafka-properties.j2
@@ -67,26 +75,10 @@
     host: "{{ groups['zookeepers'][0] }}"
     port: "{{ zk_client_port }}"
     delay: 5
-    timeout: 15
+    timeout: 50
   tags: kafka
 
 - name: Install the Kafka service handler
-  template: 
-    src: kafka-service.j2
-    dest: "/etc/init.d/kafka"
-    mode: 0755
+  shell: /home/devopr/{{ kafka_name }}/bin/kafka-server-start.sh /home/devopr/{{ kafka_name }}/config/server.properties
   notify: start kafka
   tags: kafka
-
-- name: Ensure the state of the kafka service is started
-  service: name=kafka state=started
-
-#- name: systemd start script
-#  template:
-#    src: kafka-systemd.j2
-#    dest: /etc/systemd/system/kafka.service
-#    owner: root
-#    group: root
-#    mode: 0644
-#  notify: start kafka
-#  tags: kafka
