--- a/roles/ansible-zookeeper/defaults/main.yml
+++ b/roles/ansible-zookeeper/defaults/main.yml
@@ -1,11 +1,11 @@
 ---
 apt_cache_timeout: 3600
 zookeeper:
-  version: "3.4.6"
-  mirror: "http://mirror.ox.ac.uk/sites/rsync.apache.org"
+  version: "3.5.5"
+  mirror: "https://artifactory.idfcbank.com/extra-binaries/zookeeper/3.5.5"
   download_dir: "/tmp"
-  install_dir: "/usr/local"
-  data_dir: "/usr/local/var/run/zookeeper/data"
+  install_dir: "/home/devopr"
+  data_dir: "/home/devopr/var/run/zookeeper/data"
   log_dir: "/var/log/zookeeper"
   server_properties: "zoo.cfg"
 tick_time: 2000
